# nishackwhat

./: .gitignore  Cargo.toml  config.toml  install.bat  run.bat
frontend/: app.js  index.html  style.css
src/: config.rs  main.rs  models.rs  redis_store.rs  state.rs
src/routes/: agent.rs  config_route.rs  health.rs  info.rs  lock.rs  mod.rs  screen_ws.rs  students.rs  violations.rs  ws.rs
