[package]
name = "nishack"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nishack-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
tracing = "0.1"
tracing-subscriber = "0.3"
local-ip-address = "0.6"
futures = "0.3"
dashmap = "6"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
